--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "cookie-parser": "^1.4.3",
     "dotenv": "^2.0.0",
     "ejs": "^2.4.1",
     "express": "^4.13.4",
@@ -21,6 +22,7 @@
     "morgan": "^1.7.0",
     "node-sass-middleware": "^0.9.8",
     "nodemon": "^1.11.0",
+    "path": "^0.12.7",
     "pg": "^6.0.2"
   },
   "devDependencies": {
