Made new branch for wiki API

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "knex-logger": "^0.1.0",
     "morgan": "^1.7.0",
     "node-sass-middleware": "^0.9.8",
+    "node-wikipedia": "0.0.2",
     "nodemon": "^1.11.0",
     "path": "^0.12.7",
     "pg": "^6.0.2"
