--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cookie-parser": "^1.4.3",
     "cookie-session": "^2.0.0-beta.1",
     "dotenv": "^2.0.0",
+    "dragula": "^3.7.2",
     "ejs": "^2.4.1",
     "express": "^4.13.4",
     "knex": "^0.11.7",
