--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dragula": "^3.7.2",
     "ejs": "^2.4.1",
     "express": "^4.13.4",
+    "imdb-api": "^2.2.2",
     "knex": "^0.11.7",
     "knex-logger": "^0.1.0",
     "materialize-css": "^0.98.1",
